--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <form action="#" method="post" class="form">
                 <input type="email" id="email" name="email" placeholder="Enter email here" minlength="13" maxlength="20" size="30" pattern="[A-Za-z]{5,}" />
                 <button type="submit" class="btn" id="button">Submit</button>
+                <p>Form functionality coming soon. I'm learning JavaScript and will make this work!</p>
             </form>
         </section>
         <div class="link-sections">
