--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <section id="project">
             <h2>Project</h2>
             <p>I have made this ToDo App before and i have not included JavaScript in it because i am still learning JavaScript and have not yet fully learned it, that is why i have not included it. I am putting the link to it in it, you can check it out.</p>
-            <a class="project-link" href="https://rafiqhassani.github.io/to-do-app/" target="_blank" rel="noopener noreferrer">To Do App</a>
+          <div class="link-wrapper"><a class="project-link" href="https://rafiqhassani.github.io/to-do-app/" target="_blank" rel="noopener noreferrer">To Do App</a></div>
         </section>
         <section id="contact">
             <h2>Contact</h2>
